# project-guineamobile

./: .flake8  Makefile  README.md  docker-compose.yml  make.bat  pyproject.toml  requirements.txt  sample.env
.github/: release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
config/: Dockerfile  docker-compose.yml  requirements.txt  sample.env
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  sqlalchemy.rst  src.auth.application.rst  src.auth.domain.rst  src.auth.infrastructure.rst  src.auth.interfaces.rst  src.auth.rst  src.rst  src.shared.application.rst  src.shared.configuration.rst  src.shared.domain.rst  src.shared.infrastructure.rst  src.shared.rst  src.users.application.rst  src.users.application.use_cases.rst  src.users.domain.rst  src.users.infraestructure.rst  src.users.interfaces.consumers.rst  src.users.interfaces.rst  src.users.rst
source/: conf.py
src/: Dockerfile  main.py
src/auth/application/: authenticate_user.py  token_dto.py
src/auth/domain/: credential_repository_interface.py  repositories.py  token.py  token_data.py
src/auth/infrastructure/: models.py
src/auth/interfaces/: auth_controller.py  dependencies.py
src/shared/: __init__.py
src/shared/application/: base_exceptions.py  helpers.py  security.py
src/shared/configuration/: config.py
src/shared/domain/: base_errores.py  base_out.py  helpers.py
src/shared/infraestructure/: __init__.py  database.py
src/shared/infrastructure/: database.py  dependencies.py  messaging.py  routes_manager.py
src/users/domain/: user.py  (+3 more)
(+56 files in other folders)
