[project]
name = "guinea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "flake8>=7.2.0",
    "sqlalchemy>=2.0.40",
]

[flake8.tool]
max-line-length = 88
extend-ignore = [
    "E501",
    "W503",
]
