[project]
name = "guinea"
version = "0.1.0"
description = "Hexagonal Architecture + CQRS implementation in Python. Domain-centric, testable, and decoupled from frameworks.  "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
]

[flake8.tool]
max-line-length = 88
extend-ignore = [
    "E501",
    "W503",
]
