[project]
name = "guinea"
version = "0.1.0"
description = "Hexagonal Architecture + CQRS implementation in Python. Domain-centric, testable, and decoupled from frameworks.  "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "flake8>=7.2.0",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "pydantic>=2.11.3",
    "passlib>=1.7.4",
    "python-jose>=3.4.0",
    "aio-pika>=9.5.5",
    "tenacity>=9.1.2",
]

[flake8.tool]
max-line-length = 88
extend-ignore = [
    "E501",
    "W503",
]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]
